--- a/scss/component/_list.scss
+++ b/scss/component/_list.scss
@@ -86,16 +86,22 @@
         border-color: $list-border-color;
 
         .list-item {
-            margin-top: -$list-border-width;
             border-top-color: inherit;
             border-top-width: $list-border-width;
             border-bottom-color: inherit;
             border-bottom-width: $list-border-width;
+        }
 
-            &:first-child {
-                margin-top: 0;
+        .list-item + .list-item {
+            border-top-width: 0;
+
+            &.active {
+                margin-top: -$list-border-width;
+                border-top-width: $list-border-width;
             }
         }
+
+
     }
     @if $enable-list-divided {
         .list-divided {
@@ -224,15 +230,21 @@
                     padding-right: $list-horizontal-padding;
                     padding-left: $list-horizontal-padding;
                     margin: 0 0 0 -#{$list-border-width};
-                    border-top: 0;
+                    border-top-width: 0;
                     border-right-color: inherit;
                     border-right-width: $list-border-width;
-                    border-bottom: 0;
+                    border-bottom-width: 0;
                     border-left-color: inherit;
                     border-left-width: $list-border-width;
+                }
 
-                    &:first-child {
-                        margin-left: 0;
+                .list-item + .list-item {
+                    margin-top: 0;
+                    border-left-width: 0;
+
+                    &.active {
+                        margin-left: -$list-border-width;
+                        border-left-width: $list-border-width;
                     }
                 }
             }
@@ -269,6 +281,7 @@
                         padding-right: $list-horizontal-padding;
                         padding-left: $list-horizontal-padding;
                         margin: 0 0 0 -#{$list-border-width};
+                        border-top-width: $list-border-width;
 
                         &:first-child {
                             margin-left: 0;
@@ -279,6 +292,13 @@
                         &:last-child {
                             @include border-bottom-start-radius(0);
                             @include border-end-radius($list-group-border-radius);
+                        }
+                    }
+
+                    .list-item + .list-item {
+                        // stylelint-disable-next-line selector-max-class
+                        &.active {
+                            margin-top: 0;
                         }
                     }
                 }
