--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -625,7 +625,7 @@ $kbd-box-shadow:            inset 0 -.1rem 0 rgba($black, .25) !default;
 $kbd-nested-font-weight:    $font-weight-bold !default;
 $kbd-border-radius:         .1875rem !default;
 
-$pre-color:                 $uibase-700 !default;
+$pre-color:                 null !default;
 
 
 // Figures
