Utilities-Links: Add stretched links

--- a/docs/4.0.0-alpha.5/assets/scss/_examples.scss
+++ b/docs/4.0.0-alpha.5/assets/scss/_examples.scss
@@ -320,3 +320,11 @@
 .breadcrumb-none .breadcrumb-item + .breadcrumb-item::before {
     content: none;
 }
+
+// Stretched links
+.has-link-stretch {
+    a:not(.link-stretch) {
+        position: relative;
+        z-index: 2;
+    }
+}
