--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -250,6 +250,8 @@ $enable-utility-caret:                      true !default;
 $enable-utility-close:                      true !default;
 $enable-utility-drag:                       true !default;
 
+$enable-utility-link-stretch:               true !default;
+
 $enable-utility-overflow:                   true !default;
 
 $enable-utility-position:                   true !default;
