--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,10 +1,11 @@
 @import "utilities/background";
+@import "utilities/border";
 @import "utilities/clearfix";
 @import "utilities/display";
 @import "utilities/embed";
 @import "utilities/flex";
 @import "utilities/float";
-@import "utilities/border";
+@import "utilities/link";
 @import "utilities/overflow";
 @import "utilities/position";
 @import "utilities/screen-reader";
