Widget-Modal: Add scrollable body variant

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -187,6 +187,7 @@ $enable-dropdown-back:                      true !default;
 // Modal
 $enable-modal:                              true !default;
 $enable-modal-centered:                     true !default;
+$enable-modal-scrollable:                   true !default;
 $enable-modal-header:                       true !default;
 $enable-modal-title:                        true !default;
 $enable-modal-body:                         true !default;
