--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -42,9 +42,10 @@
         }
     }
 
-    // Shell div to position the modal with bottom padding
+    // Shell div to position the modal
     .modal-dialog {
         position: relative;
+        display: flex;
         width: auto;
         margin: $modal-dialog-margin;
         direction: ltr;
@@ -52,25 +53,54 @@
         pointer-events: none;
     }
 
+    @if $enable-modal-scrollable  {
+        .modal-dialog-scrollable {
+            max-height: calc(100% - #{$modal-dialog-margin * 2});
+
+            .modal-content {
+                max-height: calc(100vh - #{$modal-dialog-margin * 2});  // IE10/11
+                overflow: hidden;
+            }
+
+            .modal-header,
+            .modal-footer {
+                flex-shrink: 0;
+            }
+
+            .modal-body {
+                overflow-y: auto;
+            }
+        }
+    }
+
     @if $enable-modal-centered  {
         .modal-dialog-centered {
-            display: flex;
             align-items: center;
-            min-height: 100%;
-            margin-top: 0;
-            margin-bottom: 0;
+            min-height: calc(100% - #{$modal-dialog-margin * 2});
 
             // Extend `modal-dialog-centered` to full viewport height
             // to allow centered modal in IE
             &::before {
                 display: block;
-                height: 100vh;
+                height: calc(100vh - #{$modal-dialog-margin * 2});
                 content: "";
             }
 
-            .modal-content {
-                margin-top: $modal-dialog-margin;
-                margin-bottom: $modal-dialog-margin;
+            @if $enable-modal-scrollable  {
+                // Ensure `.modal-body` shows scrollbar (IE10/11)
+                &.modal-dialog-scrollable {
+                    flex-direction: column;
+                    justify-content: center;
+                    height: 100%;
+
+                    .modal-content {
+                        max-height: none;
+                    }
+
+                    &::before {
+                        content: none;
+                    }
+                }
             }
         }
     }
@@ -118,7 +148,6 @@
             padding: $modal-header-padding-y $modal-header-padding-x;
             border-bottom: $modal-header-border-width solid $modal-header-border-color;
             @include border-top-radius($modal-inner-border-radius);
-            @include clearfix();
 
             // Close icon
             .close {
@@ -171,23 +200,31 @@
         // Automatically set modal's width for larger viewports
         .modal-dialog {
             max-width: $modal-md;
-            margin: $modal-dialog-sm-up-margin-y auto;
+            margin: $modal-dialog-bp-up-margin-y auto;
         }
 
-        @if $enable-modal-centered  {
-            .modal-dialog-centered {
-                margin-top: 0;
-                margin-bottom: 0;
+        .modal-content {
+            @include box-shadow($modal-content-bp-up-box-shadow);
+        }
+
+        @if $enable-modal-scrollable {
+            .modal-dialog-scrollable {
+                max-height: calc(100% - #{$modal-dialog-bp-up-margin-y * 2});
 
                 .modal-content {
-                    margin-top: $modal-dialog-sm-up-margin-y;
-                    margin-bottom: $modal-dialog-sm-up-margin-y;
+                    max-height: calc(100vh - #{$modal-dialog-bp-up-margin-y * 2});
                 }
             }
         }
 
-        .modal-content {
-            @include box-shadow($modal-content-sm-up-box-shadow);
+        @if $enable-modal-centered  {
+            .modal-dialog-centered {
+                min-height: calc(100% - #{$modal-dialog-bp-up-margin-y * 2});
+
+                &::before {
+                    height: calc(100vh - #{$modal-dialog-bp-up-margin-y * 2});
+                }
+            }
         }
 
         .modal-sm { max-width: $modal-sm; }
