Reboot: Add var for body text alignment

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -322,6 +322,7 @@ $border-radius:     .25rem !default;
 // =====
 $body-bg:               $white !default;
 $body-color:            $uibase-900 !default;
+$body-text-align:       null !default;
 
 
 // Links
