Dropdown: Fix some issues with positioning

--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -33,7 +33,7 @@
     </div>
 
     <ul class="navbar-nav ms-auto cf-header-social">
-        <li class="nav-item dropdown dropdown-menu-reverse me-1">
+        <li class="nav-item dropdown dropdown-reverse me-1">
             <a href="#" role="button" class="nav-link pe-0" data-cfw="dropdown">
                 v{{ site.docs_version }}
                 <span class="caret" aria-hidden="true"></span>
@@ -59,7 +59,7 @@
                 {% include icons/github.svg class="cf-header-icon" %}
             </a>
         </li>
-        <li class="nav-item dropdown dropdown-menu-reverse">
+        <li class="nav-item dropdown dropdown-reverse">
             <a href="#" role="button" class="nav-link" aria-label="Settings" title="Settings" data-cfw="dropdown">
                 {% include icons/cog.svg class="cf-header-icon" %}
             </a>
