--- a/scss/forms/_form-file.scss
+++ b/scss/forms/_form-file.scss
@@ -16,8 +16,24 @@
         margin: 0;
         opacity: 0;
 
-        &:focus-within, // Firefox workaround
+        // Separate rules for :focus and :focus-within
+        // IE doesn't support :focus-within and will ignore ruleset otherwise
         &:focus {
+            ~ .form-file-label {
+                color: $input-focus-color;
+                background-color: $input-focus-bg;
+                border-color: $input-focus-border-color;
+                outline: 0;
+                // Avoid using mixin so we can pass custom focus shadow properly
+                @if $enable-shadows {
+                    box-shadow: $input-box-shadow, $input-focus-box-shadow;
+                } @else {
+                    box-shadow: $input-focus-box-shadow;
+                }
+            }
+        }
+
+        &:focus-within {
             ~ .form-file-label {
                 color: $input-focus-color;
                 background-color: $input-focus-bg;
