Forms: Add variable for font-weight for form-check labels

--- a/scss/forms/_form-check.scss
+++ b/scss/forms/_form-check.scss
@@ -20,6 +20,7 @@
 
         .form-check-label {
             margin-bottom: 0; // Override default `<label>` bottom margin
+            font-weight: $form-check-label-font-weight;
         }
     }
 
