--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -732,6 +732,12 @@ $btn-link-disabled-color:           $btn-link-color !default;
 // Forms
 // =====
 // Padding and line-height should add up to buttons for inputs and selects
+$label-margin-bottom:           .5rem !default;
+
+$legend-margin-bottom:          .5rem !default;
+$legend-font-size:              1.5rem !default;
+$legend-font-weight:            null !default;
+
 $input-font-family:             null !default;
 $input-font-size:               $btn-font-size !default;
 $input-font-weight:             $font-weight-normal !default;
