--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -236,8 +236,7 @@ a {
     }
 }
 
-// And undo these styles for placeholder links/named anchors (without href)
-// which have not been made explicitly keyboard-focusable (without tabindex).
+// Undo these styles for placeholder links/named anchors (without href).
 // It would be more straightforward to just use a[href] in previous block, but that
 // causes specificity issues in many other styles that are too complex to fix.
 a:not([href]) {
