--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -408,19 +408,19 @@ fieldset {
     border: 0;
 }
 
-// 1. By using `float: left`, the legend will behave like a block element
+// 1. Correct the text wrapping in Edge and IE.
 // 2. Correct the color inheritance from `fieldset` elements in IE.
-// 3. Correct the text wrapping in Edge and IE.
 legend {
-    float: left; //1
+    display: block; // 1
     width: 100%;
+    max-width: 100%; // 1
     padding: 0;
     margin-bottom: $legend-margin-bottom;
     @include font-size($legend-font-size);
     font-weight: $legend-font-weight;
     line-height: inherit;
     color: inherit; // 2
-    white-space: normal; // 3
+    white-space: normal; // 1
 }
 
 progress {
