Use disabled attribute with sibling selectors due to Edge bug.

--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -43,7 +43,7 @@
         @extend %btn-common-disabled;
     }
     @if $enable-btn-check {
-        .btn-check-input:disabled ~ .btn {
+        .btn-check-input[disabled] ~ .btn {
             @extend %btn-common-disabled;
         }
     }
@@ -61,7 +61,7 @@
         @extend %btn-common-active !optional;
     }
     @if $enable-btn-check {
-        .btn-check-input:not(:disabled):checked ~ .btn {
+        .btn-check-input:not([disabled]):checked ~ .btn {
             @extend %btn-common-active !optional;
         }
     }
@@ -75,7 +75,7 @@
         @extend %btn-common-active-focus !optional;
     }
     @if $enable-btn-check {
-        .btn-check-input:not(:disabled):checked:focus ~ .btn {
+        .btn-check-input:not([disabled]):checked:focus ~ .btn {
             @extend %btn-common-active-focus !optional;
         }
     }
@@ -89,7 +89,7 @@
         @extend %btn-common-disabled-pointer;
     }
     @if $enable-btn-check {
-        .btn-check-input:disabled ~ .btn {
+        .btn-check-input[disabled] ~ .btn {
             @extend %btn-common-disabled-pointer;
         }
     }
