start updating color docs

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -71,7 +71,7 @@ $level-context: (
 
 
 // Increase (or decrease with negative number) to alter color for the hover state of
-//`.text-{color}-(palette-level} utilities
+// `.text-{color}-(palette-level}` utilities
 $level-delta-hover-color:           100 !default;
 
 
