Dropdown: Revise alignment class names

--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -71,7 +71,7 @@
     // }
 
     // Allow for menus to go left - aligning to right side of the control
-    .dropdown-reverse {
+    .dropend {
         .dropdown-menu {
             right: 0;
             left: auto;
