--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -57,7 +57,7 @@
     }
     .btn:not(:disabled):not(.disabled):active,
     .btn:not(:disabled):not(.disabled).active,
-    .btn.open {
+    .btn.open[data-cfw="dropdown"] {
         @extend %btn-common-active !optional;
     }
     @if $enable-btn-check {
@@ -71,7 +71,7 @@
     }
     .btn:not(:disabled):not(.disabled):active:focus,
     .btn:not(:disabled):not(.disabled).active:focus,
-    .btn.open:focus {
+    .btn.open[data-cfw="dropdown"]:focus {
         @extend %btn-common-active-focus !optional;
     }
     @if $enable-btn-check {
@@ -173,7 +173,7 @@
 
             &:not(:disabled):not(.disabled):active,
             &:not(:disabled):not(.disabled).active,
-            &.open {
+            &.open[data-cfw="dropdown"] {
                 color: $btn-link-hover-color;
                 background-color: transparent;
                 border-color: transparent;
