--- a/scss/component/_close.scss
+++ b/scss/component/_close.scss
@@ -8,7 +8,7 @@
         opacity: $close-opacity;
 
         // Override anchor styling
-        @include hover() {
+        @include hover-focus() {
             color: inherit;
             text-decoration: none;
         }
